--- a/assets/team.html
+++ b/assets/team.html
@@ -323,7 +323,7 @@
 
                         </ul>
 
-                        <a href="mailto:Dhanush.r.adoor@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:dhanush.r.adoor@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
@@ -470,7 +470,7 @@
 
                         </ul>
 
-                        <a href="mailto:Sushmaberkala2000@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
+                        <a href="mailto:sushmaberkala2000@gmail.com" style="color:white;"<button class="btn blue-gradient">CONTACT</button></a>
                     </div>
                 </div>
             </div>
