--- a/assets/event.html
+++ b/assets/event.html
@@ -26,6 +26,7 @@
 
     <style>
         body {
+            background-color:  #faeee7;
 
             line-height: 1.8;
             color: black;
