--- a/assets/event.html
+++ b/assets/event.html
@@ -281,10 +281,6 @@
                     <li><a href="team.html">TEAM</a></li>
                     <li><a href="blog.html">BLOGS</a></li>
                     <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaALut5CiELIWEnLfp5GUOv1P6QfLndaEUbLLgP4C3i7C-DQ/viewform">CONTACT</a></li>
-
-
-
-
                 </ul>
             </div>
         </div>
@@ -321,7 +317,7 @@
             <div class="col-sm-4" style="padding: 50px;">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
-                        <img class="card-img-top" src="../assets/images/dinesh.jpeg" alt="BIKE"
+                        <img class="card-img-top" src="../assets/images/dinesh.jpeg" alt="dinesh pai"
                             style="width: 95%;">
                     </div>
                     <div class="card-body card-body-cascade text-center">
