--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/js/mdb.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <style>
         .body {
@@ -284,14 +285,14 @@
         <h2 style="margin-bottom:30px"> <b> ASSOCIATION FOR COMPUTING MACHINERY </b> </h2>
         <hr>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-6 data-aos="fade-right"">
                 <br>
                 <br>
                 <a href="https://www.acm.org/"><img src="./assets/images/acm.png" alt="logo"
                         style="align-content: center; width: 100%;"> </a>
 
             </div>
-            <div class="col-sm-6" style="text-align: justify;">
+            <div class="col-sm-6"  data-aos="fade-left" style="text-align: justify;">
                 <br>
                 <p style="font-size: 20px">
                     ACM, the world&#39;s largest educational and scientific computing society, delivers resources that
@@ -307,13 +308,13 @@
     <section id="about">
         <div class="about" style="margin: 20px  20px; text-align: center;">
             <br>
-            <div style="text-align: center;">
+            <div data-aos="fade-right" style="text-align: center;">
                 <img src="./assets/images/ACM logo sahyadri black.png" alt="logo"
                     style="align-content: center; width: 300px;">
             </div>
             <hr>
             <div class="row">
-                <div class="col-sm-6">
+                <div data-aos="fade-right" class="col-sm-6">
 
                     <br>
                     <br>
@@ -330,7 +331,7 @@
 
                 </div>
 
-                <div class="col-sm-6" style="text-align: center;">
+                <div class="col-sm-6"  data-aos="fade-left" style="text-align: center;">
 
                     <img src="./assets/images/Sahyadri illustration@4x@2x.png" alt="image" style="width: 100%; ">
 
@@ -350,7 +351,7 @@
           <!--  <a href="./activity/research.html">-->
 
 
-                <div class="col-sm-4 ho"
+                <div class="col-sm-4 ho"  data-aos="zoom-in"
                     style="text-align: center; padding: 100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
@@ -365,7 +366,7 @@
 
 
 
-                <div class="col-sm-4 ho"
+                <div class="col-sm-4 ho" data-aos="zoom-in"
                     style="text-align: center; padding: 100px; background-color: #1c2d58; color: cornsilk;">
                     <b>
                         <h1>
@@ -377,7 +378,7 @@
                 </div>
 
             <!--<a href="./activity/webinar.html">-->
-                <div class="col-sm-4 ho"
+                <div class="col-sm-4 ho" data-aos="zoom-in"
                     style="text-align: center; padding:100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
@@ -391,7 +392,7 @@
         </div>
         <div class="row">
           <!--  <a href="./activity/contest.html">-->
-                <div class="col-sm-4 ho"
+                <div class="col-sm-4 ho" data-aos="zoom-in"
                     style="text-align: center; padding: 100px; background-color: #1c2d58; color: cornsilk;">
                     <b>
                         <h1>
@@ -403,7 +404,7 @@
                 </div>
             </a>
           <!--  <a href="./activity/technical.html">-->
-                <div class="col-sm-4 ho"
+                <div class="col-sm-4 ho" data-aos="zoom-in"
                     style="text-align: center; padding: 100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
@@ -415,7 +416,7 @@
                 </div>
             </a>
             <!--<a href="./activity/training.html">-->
-                <div class="col-sm-4 ho"
+                <div class="col-sm-4 ho" data-aos="zoom-in"
                     style="text-align: center; padding: 100px; background-color: #1c2d58; color: cornsilk;">
                     <b>
                         <h1>
@@ -446,7 +447,10 @@
 
     </div>>
     <br>
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+     <script>
+       AOS.init();
+     </script>
 
 </body>
 
