--- a/assets/team.html
+++ b/assets/team.html
@@ -23,6 +23,8 @@
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.1/js/mdb.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 
     <style>
         body {
@@ -261,7 +263,7 @@
 
 
 
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-right">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/harisha.png" alt = "image"
@@ -283,7 +285,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-up">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/likith.png" alt = "image"
@@ -306,7 +308,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-left">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/dhanush.png" alt = "image"
@@ -327,7 +329,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-right" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/vineet.png" alt = "image"
@@ -348,7 +350,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-down" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/vishwas.png" alt = "image"
@@ -369,7 +371,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-left" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/samarth.png" alt = "image"
@@ -390,7 +392,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-right" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/karthik.png" alt = "image"
@@ -411,7 +413,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-up" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/vrashank.png" alt = "image"
@@ -432,7 +434,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-left" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/uttam.png" alt = "image"
@@ -453,7 +455,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-right" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/sushma.png" alt = "image"
@@ -474,7 +476,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-down" data-aos-offset="200"data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/rovit.png" alt = "image"
@@ -495,7 +497,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-left" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/sudarshan.png" alt = "image"
@@ -516,7 +518,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-right" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/trishar.jpeg" alt = "image"
@@ -537,7 +539,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-up" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/shishir.png" alt = "image"
@@ -558,7 +560,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-left" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/thohif.png" alt = "image"
@@ -602,6 +604,12 @@
     </div>
     <br>
 
+
+    <!--for animation-->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+         <script>
+           AOS.init();
+         </script>
 
 
 
