--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <style>
-        .body {
-
+        body {
+            overflow-x: hidden;
             line-height: 1.8;
             color: black;
             font-family: 'Nova Square';
