--- a/assets/team.html
+++ b/assets/team.html
@@ -28,7 +28,7 @@
 
     <style>
         body {
-          
+             overflow-x: hidden;
             line-height: 1.8;
             color: black;
             font-family: 'Nova Square';
