--- a/assets/team.html
+++ b/assets/team.html
@@ -28,7 +28,7 @@
 
     <style>
         body {
-             overflow-x: hidden;
+
             line-height: 1.8;
             color: black;
             font-family: 'Nova Square';
@@ -263,7 +263,7 @@
 
 
 
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-right">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/harisha.png" alt = "image"
@@ -285,7 +285,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-up">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/likith.png" alt = "image"
@@ -308,7 +308,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-left">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/dhanush.png" alt = "image"
@@ -329,7 +329,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-right" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/vineet.png" alt = "image"
@@ -350,7 +350,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-down" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/vishwas.png" alt = "image"
@@ -371,7 +371,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-left" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/samarth.png" alt = "image"
@@ -392,7 +392,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-right" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/karthik.png" alt = "image"
@@ -413,7 +413,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-up" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/vrashank.png" alt = "image"
@@ -434,7 +434,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-left" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/uttam.png" alt = "image"
@@ -455,7 +455,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-right" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/sushma.png" alt = "image"
@@ -476,7 +476,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-down" data-aos-offset="200"data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200"data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/rovit.png" alt = "image"
@@ -497,7 +497,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-left" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/sudarshan.png" alt = "image"
@@ -518,7 +518,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-right" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/trishar.jpeg" alt = "image"
@@ -539,7 +539,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-up" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/shishir.png" alt = "image"
@@ -560,7 +560,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4" style="padding: 50px;" data-aos="fade-left" data-aos-offset="200" data-aos-delay="10">
+            <div class="col-sm-4" style="padding: 50px;" data-aos="zoom-in" data-aos-offset="200" data-aos-delay="10">
                 <div class="card card-cascade">
                     <div class="view view-cascade overlay">
                         <img class="card-img-top" src="../assets/images/thohif.png" alt = "image"
