--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <h2 style="margin-bottom:30px"> <b> ASSOCIATION FOR COMPUTING MACHINERY </b> </h2>
         <hr>
         <div class="row">
-            <div class="col-sm-6 data-aos="fade-right"">
+            <div class="col-sm-6 data-aos="fade-up"">
                 <br>
                 <br>
                 <a href="https://www.acm.org/"><img src="./assets/images/acm.png" alt="logo"
@@ -308,13 +308,13 @@
     <section id="about">
         <div class="about" style="margin: 20px  20px; text-align: center;">
             <br>
-            <div data-aos="fade-right" style="text-align: center;">
+            <div data-aos="fade-up" style="text-align: center;">
                 <img src="./assets/images/ACM logo sahyadri black.png" alt="logo"
                     style="align-content: center; width: 300px;">
             </div>
             <hr>
             <div class="row">
-                <div data-aos="fade-right" class="col-sm-6">
+                <div data-aos="fade-up" class="col-sm-6">
 
                     <br>
                     <br>
