--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
                 </div>
 
-                <div class="col-sm-6"  data-aos="fade-left" style="text-align: center;">
+                <div class="col-sm-6"  data-aos="fade-right" style="text-align: center;">
 
                     <img src="./assets/images/Sahyadri illustration@4x@2x.png" alt="image" style="width: 100%; ">
 
