--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
                 </div>
 
-                <div class="col-sm-6"  data-aos="fade-right" style="text-align: center;">
+                <div class="col-sm-6"  data-aos="fade-right" data-aos-delay="0" style="text-align: center;">
 
                     <img src="./assets/images/Sahyadri illustration@4x@2x.png" alt="image" style="width: 100%; ">
 
@@ -351,7 +351,7 @@
           <!--  <a href="./activity/research.html">-->
 
 
-                <div class="col-sm-4 ho"  data-aos="zoom-in"
+                <div class="col-sm-4 ho"  data-aos="zoom-in" data-aos-delay="30"
                     style="text-align: center; padding: 100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
