--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <h2 style="margin-bottom:30px"> <b> ASSOCIATION FOR COMPUTING MACHINERY </b> </h2>
         <hr>
         <div class="row">
-            <div class="col-sm-6 data-aos="fade-up"">
+            <div class="col-sm-6 data-aos="fade-right"">
                 <br>
                 <br>
                 <a href="https://www.acm.org/"><img src="./assets/images/acm.png" alt="logo"
@@ -314,7 +314,7 @@
             </div>
             <hr>
             <div class="row">
-                <div data-aos="fade-up" class="col-sm-6">
+                <div data-aos="fade-right" class="col-sm-6">
 
                     <br>
                     <br>
@@ -351,7 +351,7 @@
           <!--  <a href="./activity/research.html">-->
 
 
-                <div class="col-sm-4 ho"  data-aos="zoom-in" data-aos-delay="30"
+                <div class="col-sm-4 ho"  data-aos="zoom-in" data-aos-delay="50"
                     style="text-align: center; padding: 100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
