--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <section id="about">
         <div class="about" style="margin: 20px  20px; text-align: center;">
             <br>
-            <div data-aos="fade-up" style="text-align: center;">
+            <div data-aos="fade-right" style="text-align: center;">
                 <img src="./assets/images/ACM logo sahyadri black.png" alt="logo"
                     style="align-content: center; width: 300px;">
             </div>
@@ -331,7 +331,7 @@
 
                 </div>
 
-                <div class="col-sm-6"  data-aos="fade-right" data-aos-delay="0" style="text-align: center;">
+                <div class="col-sm-6"  data-aos="fade-right" data-aos-delay="0" data-aos-duration="600" style="text-align: center;">
 
                     <img src="./assets/images/Sahyadri illustration@4x@2x.png" alt="image" style="width: 100%; ">
 
@@ -351,7 +351,7 @@
           <!--  <a href="./activity/research.html">-->
 
 
-                <div class="col-sm-4 ho"  data-aos="zoom-in" data-aos-delay="50"
+                <div class="col-sm-4 ho"  data-aos="zoom-in" data-aos-delay="70"
                     style="text-align: center; padding: 100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
