--- a/index.html
+++ b/index.html
@@ -308,13 +308,13 @@
     <section id="about">
         <div class="about" style="margin: 20px  20px; text-align: center;">
             <br>
-            <div data-aos="fade-right" style="text-align: center;">
+            <div data-aos="fade-right" data-aos-offset="250" style="text-align: center;">
                 <img src="./assets/images/ACM logo sahyadri black.png" alt="logo"
                     style="align-content: center; width: 300px;">
             </div>
             <hr>
             <div class="row">
-                <div data-aos="fade-right" class="col-sm-6">
+                <div data-aos="fade-right" data-aos-offset="250" class="col-sm-6">
 
                     <br>
                     <br>
