--- a/index.html
+++ b/index.html
@@ -285,14 +285,14 @@
         <h2 style="margin-bottom:30px"> <b> ASSOCIATION FOR COMPUTING MACHINERY </b> </h2>
         <hr>
         <div class="row">
-            <div class="col-sm-6 data-aos="fade-right"">
+            <div class="col-sm-6 data-aos="fade-right">
                 <br>
                 <br>
                 <a href="https://www.acm.org/"><img src="./assets/images/acm.png" alt="logo"
                         style="align-content: center; width: 100%;"> </a>
 
             </div>
-            <div class="col-sm-6"  data-aos="fade-left" style="text-align: justify;">
+            <div class="col-sm-6"  data-aos="fade-right" style="text-align: justify;">
                 <br>
                 <p style="font-size: 20px">
                     ACM, the world&#39;s largest educational and scientific computing society, delivers resources that
@@ -331,7 +331,7 @@
 
                 </div>
 
-                <div class="col-sm-6"  data-aos="fade-right" data-aos-delay="0" data-aos-duration="600" style="text-align: center;">
+                <div class="col-sm-6"  data-aos="fade-right" data-aos-delay="0" data-aos-duration="400" style="text-align: center;">
 
                     <img src="./assets/images/Sahyadri illustration@4x@2x.png" alt="image" style="width: 100%; ">
 
@@ -351,7 +351,7 @@
           <!--  <a href="./activity/research.html">-->
 
 
-                <div class="col-sm-4 ho"  data-aos="zoom-in" data-aos-delay="70"
+                <div class="col-sm-4 ho"  data-aos="zoom-in" data-aos-delay="100" data-aos-offset="250"
                     style="text-align: center; padding: 100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
