--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
     <div class="about" style="margin: 20px  20px; text-align: center;">
         <br>
-        <h2 style="margin-bottom:30px"> <b> ASSOCIATION FOR COMPUTING MACHINERY </b> </h2>
+        <h2 style="margin-bottom:30px"> <b> ACM-SAHYADRI CHAPTER </b> </h2>
         <hr>
         <div class="row">
             <div class="col-sm-6 data-aos="fade-right">
