--- a/index.html
+++ b/index.html
@@ -285,14 +285,14 @@
         <h2 style="margin-bottom:30px"> <b> ACM-SAHYADRI CHAPTER </b> </h2>
         <hr>
         <div class="row">
-            <div class="col-sm-6 data-aos="fade-right">
+            <div class="col-sm-6 data-aos="fade-right" data-aos-offset="50">
                 <br>
                 <br>
                 <a href="https://www.acm.org/"><img src="./assets/images/acm.png" alt="logo"
                         style="align-content: center; width: 100%;"> </a>
 
             </div>
-            <div class="col-sm-6"  data-aos="fade-right" style="text-align: justify;">
+            <div class="col-sm-6"  data-aos="fade-up" style="text-align: justify;">
                 <br>
                 <p style="font-size: 20px">
                     ACM, the world&#39;s largest educational and scientific computing society, delivers resources that
@@ -314,7 +314,7 @@
             </div>
             <hr>
             <div class="row">
-                <div data-aos="fade-right" data-aos-offset="250" class="col-sm-6">
+                <div data-aos="fade-up" data-aos-offset="150" class="col-sm-6">
 
                     <br>
                     <br>
