--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <h2 style="margin-bottom:30px"> <b> ACM-SAHYADRI CHAPTER </b> </h2>
         <hr>
         <div class="row">
-            <div class="col-sm-6 data-aos="fade-right" data-aos-offset="50">
+            <div class="col-sm-6 data-aos="zoom-in" data-aos-offset="50">
                 <br>
                 <br>
                 <a href="https://www.acm.org/"><img src="./assets/images/acm.png" alt="logo"
@@ -308,7 +308,7 @@
     <section id="about">
         <div class="about" style="margin: 20px  20px; text-align: center;">
             <br>
-            <div data-aos="fade-right" data-aos-offset="250" style="text-align: center;">
+            <div data-aos="zoom-in" data-aos-offset="250" style="text-align: center;">
                 <img src="./assets/images/ACM logo sahyadri black.png" alt="logo"
                     style="align-content: center; width: 300px;">
             </div>
@@ -331,7 +331,7 @@
 
                 </div>
 
-                <div class="col-sm-6"  data-aos="fade-right" data-aos-delay="0" data-aos-duration="400" style="text-align: center;">
+                <div class="col-sm-6"  data-aos="zoom-in" data-aos-delay="0" data-aos-duration="400" style="text-align: center;">
 
                     <img src="./assets/images/Sahyadri illustration@4x@2x.png" alt="image" style="width: 100%; ">
 
@@ -366,7 +366,7 @@
 
 
 
-                <div class="col-sm-4 ho" data-aos="zoom-in"
+                <div class="col-sm-4 ho" data-aos="zoom-in" data-aos-delay="100" data-aos-offset="250"
                     style="text-align: center; padding: 100px; background-color: #1c2d58; color: cornsilk;">
                     <b>
                         <h1>
@@ -378,7 +378,7 @@
                 </div>
 
             <!--<a href="./activity/webinar.html">-->
-                <div class="col-sm-4 ho" data-aos="zoom-in"
+                <div class="col-sm-4 ho" data-aos="zoom-in" data-aos-delay="100" data-aos-offset="250"
                     style="text-align: center; padding:100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
@@ -392,7 +392,7 @@
         </div>
         <div class="row">
           <!--  <a href="./activity/contest.html">-->
-                <div class="col-sm-4 ho" data-aos="zoom-in"
+                <div class="col-sm-4 ho" data-aos="zoom-in" data-aos-delay="100" data-aos-offset="250"
                     style="text-align: center; padding: 100px; background-color: #1c2d58; color: cornsilk;">
                     <b>
                         <h1>
@@ -404,7 +404,7 @@
                 </div>
             </a>
           <!--  <a href="./activity/technical.html">-->
-                <div class="col-sm-4 ho" data-aos="zoom-in"
+                <div class="col-sm-4 ho" data-aos="zoom-in" data-aos-delay="100" data-aos-offset="250"
                     style="text-align: center; padding: 100px; background-color: cornflowerblue; color: cornsilk;">
                     <b>
                         <h1>
@@ -416,7 +416,7 @@
                 </div>
             </a>
             <!--<a href="./activity/training.html">-->
-                <div class="col-sm-4 ho" data-aos="zoom-in"
+                <div class="col-sm-4 ho" data-aos="zoom-in" data-aos-delay="100" data-aos-offset="250"
                     style="text-align: center; padding: 100px; background-color: #1c2d58; color: cornsilk;">
                     <b>
                         <h1>
