--- a/assets/event.html
+++ b/assets/event.html
@@ -262,7 +262,7 @@
         }
           .ml2 {
   font-weight: 900;
-  font-size: 2.3em;
+  font-size: 1em;
 }
 
 .ml2 .letter {
@@ -307,7 +307,7 @@
         <br>
         <div style="text-align: center;">
             <b>
-               <h2 class ="ml2">ACM-SAHYADRI CHAPTER</h2>
+               <h2 class ="ml2">LIST OF ALL OUR EVENTS AND ACTIVITIES</h2>
             </b>
           <hr style="width:60%">
 
