--- a/assets/event.html
+++ b/assets/event.html
@@ -307,7 +307,7 @@
         <br>
         <div style="text-align: center;">
             <b>
-               <h2 class ="ml2">LIST OF ALL OUR EVENTS AND ACTIVITIES</h2>
+               <h2 class ="ml2">LIST OF ALL OUR EVENTS<br>AND ACTIVITIES</h2>
             </b>
           <hr style="width:60%">
 
