--- a/assets/team.html
+++ b/assets/team.html
@@ -263,7 +263,7 @@
         <br>
         <div style="text-align: center;">
             <b>
-                <h1>OUR TEAM MEMBERS</h1>
+                <h1 class="ml2">OUR TEAM MEMBERS</h1>
             </b>
             <hr style="width:60%">
             <br>
