--- a/assets/event.html
+++ b/assets/event.html
@@ -29,7 +29,7 @@
 
     <style>
         body {
-            background-color:  #faeee7;
+            background-color:  white;
 
             line-height: 1.8;
             color: black;
