--- a/assets/team.html
+++ b/assets/team.html
@@ -282,7 +282,7 @@
                     </div>
                     <hr>
                     <div class=" card-body card-body-cascade text-center">
-                        <h4 class="card-title">Prof. HARISHA S</h4>
+                        <h4 class="card-title">Mr.Harisha </h4>
                         <h6 class="font-weight-bold indigo-text py-2">PROFESSIONAL SUPPORT</h6>
                         <ul class="social-icons">
                             <li><a href="https://www.instagram.com/harisha.17/"><i class="fa fa-instagram"></i></a></li>
@@ -432,7 +432,7 @@
                     </div>
                     <hr>
                     <div class="card-body card-body-cascade text-center">
-                        <h4 class="card-title"><strong>VRASHANK RAO</strong></h4>
+                        <h4 class="card-title"><strong>VRASHANK RAO M</strong></h4>
                         <h6 class="font-weight-bold indigo-text py-2">WEB MASTER</h6>
                         <ul class="social-icons">
                             <li><a href="https://www.instagram.com/vrashankrao/?hl=en"><i class="fa fa-instagram"></i></a></li>
