--- a/assets/blog.html
+++ b/assets/blog.html
@@ -233,7 +233,7 @@
                     <li><a href="event.html">EVENTS</a></li>
                     <li><a href="../assets/team.html">TEAM</a></li>
                     <li><a href="blog.html">BLOGS</a></li>
-                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaALut5CiELIWEnLfp5GUOv1P6QfLndaEUbLLgP4C3i7C-DQ/viewform">CONTACT</a></li>
+                    <li><a href="contactus.html">CONTACT</a></li>
 
 
 
