--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <li><a href="./assets/event.html">EVENTS</a></li>
                     <li><a href="./assets/team.html">TEAM</a></li>
                     <li><a href="./assets/blog.html">BLOGS</a></li>
-                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfaALut5CiELIWEnLfp5GUOv1P6QfLndaEUbLLgP4C3i7C-DQ/viewform">CONTACT</a></li>
+                    <li><a href="contactus.html">CONTACT</a></li>
 
                 </ul>
             </div>
