--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <li><a href="./assets/event.html">EVENTS</a></li>
                     <li><a href="./assets/team.html">TEAM</a></li>
                     <li><a href="./assets/blog.html">BLOGS</a></li>
-                    <li><a href="contactus.html">CONTACT</a></li>
+                    <li><a href="./assets/contactus.html">CONTACT</a></li>
 
                 </ul>
             </div>
